# vatomic

./: .gitignore  CMakeLists.txt
boogie/: ASMModel.hs  ASMParsers.hs  BoogieTranslator.hs  CMakeLists.txt  Main.hs  await.bpl  library.bpl  read.bpl  rmw.bpl  write.bpl  xchg.bpl
include/vsync/: doc.h
include/vsync/atomic/: compat.h  dispatch.h  doc.h
include/vsync/atomic/internal/: arm32.h  arm_common.h  builtins_macros.h  dispatch.h
scripts/: check_skipped.sh  known_skipped_verification.txt  replace_hm_memcpy.py  sanitize.sh  spawn_gitlab_jobs.sh  uint-check.sh
test/: CMakeLists.txt
tmplr/: tmplr.c
tmplr/include/tmplr/: macros.h
